# QCQPIterCertifier

./: CMakeLists.txt  README.md
cmake/: IterCertAlgConfigVersion.cmake.in  setup_installation.cmake
examples/: CMakeLists.txt  example_rankY.cpp  example_staircase.cpp  example_symm.cpp
include/rankY/: RankYCert.cpp  RankYCert.h  RankYCertManifold.h  RankYCertProblem.cpp  RankYCertProblem.h  RankYCertTypes.h
include/staircase/: StaircaseCert.cpp  StaircaseCert.h  StaircaseCertTypes.h
include/symmetric/: MinNormCert.cpp  MinNormCert.h  SymmCert.cpp  SymmCert.h  SymmCertManifold.h  SymmCertProblem.cpp  SymmCertProblem.h  SymmCertTypes.h
src/rankY/: RankYCertManifold.cpp  RankYCertTypes.cpp
src/symmetric/: SymmCertManifold.cpp  SymmCertTypes.cpp
